fixed text on pic, had shifted b/c of p styling for bottom 4 paragraphs

--- a/main.css
+++ b/main.css
@@ -118,7 +118,8 @@ background-color: blue;
   margin: 200px;
   padding:20px;
 }
-p {
+
+.infotext p {
   float:left;
   width:45%;
 }
